--- a/app/src/main/resources/static/html/header.html
+++ b/app/src/main/resources/static/html/header.html
@@ -13,7 +13,7 @@
    data-th-data-csrf="${_csrf.token}" data-th-data-csrf-header="${_csrf.headerName}"
    data-csrf="token" data-csrf-header="headerName">로그아웃</a>
 
-<a data-th-href="@{/auth/form}" data-th-if="${session.loginUser == null}" href="../auth/form">로그인</a>
+<a href="/html/auth/form.html">로그인</a>
 
 <a data-th-href="@{/about}" href="about">소개</a>
 <script>
