--- a/app/src/main/resources/static/home.html
+++ b/app/src/main/resources/static/home.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>비트캠프 데브옵스 5기</title>
-    <link rel="stylesheet" href="css/common.css" />
-    <script src="/context.js"></script>
-    <script src="js/init-page.js"></script>
+    <link rel="stylesheet" href="/css/common.css" />
   </head>
   <body>
     <div class="container">
@@ -16,6 +14,6 @@
 
       <footer id="footer">꼬리말</footer>
     </div>
-    <!-- .container -->
+    <script src="/js/init-page.js"></script>
   </body>
 </html>
